--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Good",
+    "name": "good-typescript",
     "author": "Sergio Morchón Poveda <sergio.morchon@outlook.com>",
     "homepage": "https://github.com/SergioMorchon/Good",
     "description": "Some good and useful implementations for TypeScript or JavaScript projects.",
