--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
         "grunt-tslint": "latest",
         "grunt-typescript": "latest",
         "grunt-banner": "latest",
+        "grunt": "latest",
         "typescript": "latest"
     },
     "bugs": "https://github.com/SergioMorchon/Good/issues",
     "repository": {
         "type": "git",
         "url": "https://github.com/SergioMorchon/Good.git"
+    },
+    "engines": { 
+        "node": ">=0.6"
     },
     "main": "./dist/good.js",
     "scripts": {
