--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     },
     "main": "./dist/good.js",
     "scripts": {
-        "test": "grunt travis --verbose"
+        "test": "grunt build --verbose"
     }
 }
