--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ node_js:
   - "0.10"
 before_install: npm install -g grunt-cli
 install: npm install
-before_install: grunt build
+after_install: grunt build
